# K24-RELEASES

./: .env.example  .gitignore  .graphify_detect.json  .graphify_python  ARCHITECTURE.md  ARCHITECTURE_ANSWERS.md  AUTH_AUDIT.md  AUTH_WORKFLOW_COMPLETE.md  BUILD_UI_ONLY.bat  CLAUDE.md  CLOUD_SERVICES_ORGANIZATION.md  CRASH_DIAGNOSIS.md  CRITICAL_WEB_LAUNCH_ISSUES.md  DESKTOP_BUILD_WALKTHROUGH.md  DEV_NOTES.md  DEV_QUICK_REFERENCE.md  DOCS_DEVICE_AUTH_FLOW.md  DOCS_WEB_AUTH_SPEC.md  DOMAIN_AUDIT_REPORT.md  Dockerfile  ETHOS.md  FINAL_FIX.bat  FIX_FK_CONSTRAINT.sql  FORCE_CLEAN_BUILD.bat  IMPLEMENTATION_SUMMARY.md  K24_ANALYSIS.md  K24_DESKTOP_APP_BREAKTHROUGH.md  K24_PRODUCTION_EXECUTION_PLAN.md  LAUNCH_ROADMAP_7_DAYS.md  M2_TASK_3_COMPLETE.md  M3_PROGRESS_STATUS.md  M3_T2_COMPLETE.md  M4_FINAL_SUMMARY.md  M4_PASS1_COMPLETE.md  M4_TASK.md  M5_HARDENING_PLAN.md  M5_SMOKE_TEST_SUMMARY.md  MASTER_DIAGNOSIS.md  PHASE3_WHATSAPP_CONSTRAINTS.sql  PHASE4_PERFORMANCE_INDEXES.sql  (+238 more)
.claude/: settings.local.json
alembic/: env.py
backend/: .env.example  __init__.py  agent.py  agent_error_handler.py  agent_gemini.py  agent_intent.py  agent_orchestrator_v2.py  agent_system.py  agent_transaction.py  agent_validator.py  api.py  audit_engine.py  auth.py  background_jobs.py  celery_app.py  check_data.py  check_tally_health.py  create_default_user.py  crud.py  debug_auth.py  debug_check_ledger_group.py  debug_create_ledger.py  debug_dump_jeera.py  debug_gemini.py  debug_pull_voucher.py  debug_reports.py  debug_tally.py  dependencies.py  desktop_main.py  diag_out.txt  diagnose_missing_vouchers.py  diagnose_tally_crash.py  enable_auto_post.py  extract_jeera_xml.py  fetch_purchase_sample.py  fix_db_migration.py  full_dump.xml  generate_invoice_suite.py  get_tally_companies.py  graph.py  (+51 more)
baileys-listener/: .env.example  .gitignore  Dockerfile  README.md  batch-handler.js  listener-diagnostic.js  listener-mock.js  listener.js  package-lock.json  package.json  test.js
clients/: tally_agent.py
cloud-backend/: .env.example  .gitignore  Dockerfile  M2_POLLING_ENDPOINT.md  (+13 more)
frontend/src-tauri/: Cargo.toml  patch.py  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: commands.rs  lib.rs
(+402 files in other folders)
